1998-06-24  Raja R Harinath  <harinath@cs.umn.edu>

	* gnome-fileutils.m4 (AM_FUNC_ERROR_AT_LINE): New check.
	(vprintf): New check.
	(ftruncate.c): Remove check.  
	This needs to be further cleaned up to only list what is
	needed for gdiskfree.
	* Makefile.am (MACROS): Add gnome-fileutils.m4.
	
1998-06-14  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-sysdeps.m4 (LINUX_TABLE): New automake conditional;
	also defines HAVE_LINUX_TABLE.

1998-06-13  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-sysdeps.m4: Added check for the table ()
	system call in the linux kernel.

1998-06-11  Raja R Harinath  <harinath@cs.umn.edu>

	* gnome-x-checks.m4 (USE_DEVGTK): Use AC_EGREP_CPP rather than
	AC_CHECK_HEADER.  AC_CHECK_HEADER is fooled by warnings.

	* gnome-support.m4 (AC_PROG_AWK): Look for awk.
	(CROSS_COMPILING): Remove conditional.
	
Wed Jun 10 14:19:39 EDT 1998 Gregory McLean <gregm@comstar.net>

	* gnome-x-checks.m4: More tweeks to make building against gtk 1.0
	  and gtk1.1 less painful.

1998-06-08  Martin Baulig  <martin@home-of-linux.org>

	* gnome-support.m4 (CROSS_COMPILING): New automake conditional;
	(need_gnome_support): added `AC_SUBST(need_gnome_support)'.

1998-06-07  Martin Baulig  <martin@home-of-linux.org>

	* gnome-guile-checks.m4 (GNOME_CHECK_GUILE): When
	cross-compiling, we now check for `$host_alias-buile-guile'.

1998-06-03  Martin Baulig  <martin@home-of-linux.org>

	* gnome-guile-checks.m4 (GNOME_CHECK_GUILE): Looks also
	in $GNOME_LIBDIR; added failflag: GNOME_CHECK_GUILE(fail)
	will abort if guile cannot be found.

1998-05-23  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-sysdeps.m4 (GNOME_LIBGTOP_HOOK):
	(libgtop_use_machine_h): Set this to true on SunOS.

1998-05-22  Martin Baulig  <baulig@merkur.uni-trier.de>

	* gnome-fileutils.m4 (GNOME_FILEUTILS_CHECKS): New file.
	Imported from `configure.in' in GNU fileutils 3.16. It does
	all the checks that are needed for the diskusage applet.
